# d52sg

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  pyproject.toml
plans/: plan.md  v2.md
src/d52sg/: config.py  config_report.py  constraints.py  convert.py  models.py  output.py  output_html.py  roundrobin.py  scan.py  schedule.py  scheduler.py  stats.py  verify.py
tests/: test_config.py  test_constraints.py  test_integration.py  test_models.py  test_roundrobin.py  test_scheduler.py
